syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-shopping-list/api/proto/v1";

message Purchase {
  string id = 1;
  string name = 2;
  optional int32 multiplier = 3;
  bool purchased = 4;
  optional float amount = 5;
  optional string measureUnit = 6;
  optional string recipeId = 7;
}

